# backend/openapi.json
@@ -324,6 +324,13 @@
             "title": "Repetitions",
             "type": "integer"
           },
+          "rest_s": {
+            "default": 0,
+            "maximum": 600.0,
+            "minimum": 0.0,
+            "title": "Rest S",
+            "type": "number"
+          },
           "scale": {
             "items": {
               "type": "integer"
